<resources>
    <string name="app_name">EzMeal</string>

    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="old_password_label">Old password</string>
    <string name="new_password_label">New password</string>
    <string name="age_label">Age</string>
    <string name="address_label">Address</string>
    <string name="gender_label">Gender</string>
    <string name="login_label">Log in</string>
    <string name="register_label">Register</string>
    <string name="no_account_label">No account yet ? Create one</string>
    <string name="already_account_label">Already have an account ? Sign in</string>
    <string name="authenticate_label">Authentication...</string>
    <string name="account_change_label">Save account settings</string>
    <string-array name="gender">
        <item name="gender_male_label">Male</item>
        <item name="gender_female_label">Female</item>
        <item name="gender_other_label">Other</item>
    </string-array>

    <string name="cancel_label">Cancel</string>
    <string name="pause_label">Pause</string>
    <string name="continue_label">Continue</string>
    <string name="run_background_label">Run in background</string>
    <string name="timer_ended_title_label">Time elapsed</string>
    <string name="timer_ended_label">The timer is done, time to go to the next step</string>
    <string name="timer_ended_stop_label">Go to next step</string>

    <string name="etap_prec">Etape precedente</string>
    <string name="etape_suiv">Etape suivante</string>
    <string name="add_comment">Comment</string>
    <string name="set_comment">Send comment</string>
    <string name="set_grade">Send grade</string>
    <string name="avis">Give your recommendation</string>

    <string name="invalid_username_label">Enter a valid username</string>
    <string name="invalid_password_label">Enter a valid password</string>
    <string name="invalid_age_label">Enter a valid age</string>
    <string name="invalid_address_label">Enter a valid address</string>
    <string name="invalid_gender_label">Enter a valid gender</string>

    <string name="unsuccessfull_login_label">Unsuccessfull log in, try again</string>
    <string name="unsuccessfull_register_label">Unsuccessfull registering, try again</string>
    <string name="unsuccessfull_change_label">Unsuccessfull change, try again</string>
    <string name="suggest_picture">Picture of the recipe</string>
    <string name="menu">Menu</string>
    <string name="profil">Profil utilisateur</string>
    <string name="suggestion">Suggestion du jour</string>
    <string name="catalogue">Datalogue</string>
    <string name="recherche">Recherche</string>
    <string name="déconnexion">Déconnexion</string>

    <string name="propose_sent">Nous vous proposons aujourd\'hui: </string>
    <string name="retour">retour</string>
    <string name="autre_suggestion">Autre suggestion</string>
    <string name="plus_de_sug">Plus de suggestions</string>


    <string name="par_type">Par type:</string>
    <string name="par_soust">Par sous-type:</string>
    <string name="par_mot">Par mots clés:</string>
    <string name="lancer_recherche">Lancer recherche</string>
    <string name="pas_de_result">Pas de résultats</string>
    <string name="autre_rech">Autre recherche</string>
    <string name="retour_menu">Retour au menu</string>
</resources>
