<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.lsinf1225.ezmeal.menu"
    android:background="@drawable/login_background">


    <Button
        android:id="@+id/button_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/orange"
        android:text="@string/déconnexion"
        android:padding="10dp"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="-8dp" />

    <Button
        android:id="@+id/button_user"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="145dp"
        android:alpha="0.9"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:text="@string/profil"
        android:padding="10dp"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_suggest"
        android:layout_width="163dp"
        android:layout_height="54dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="231dp"
        android:alpha="0.9"
        android:padding="10dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/orange"
        android:text="@string/suggestion"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="408dp"
        android:alpha="0.9"
        android:padding="10dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/orange"
        android:text="@string/recherche"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_catalogue"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="319dp"
        android:alpha="0.9"
        android:padding="10dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/orange"
        android:text="@string/catalogue"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_menu_title"
        android:layout_width="140dp"
        android:layout_height="71dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="49dp"
        android:text="@string/menu"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
