<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    tools:context="be.lsinf1225.ezmeal.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:layout_marginBottom="36dp"
            android:layout_gravity="center_horizontal" />

        <!-- Username Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="10dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/username_label"/>
        </LinearLayout>

        <!-- Password Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="10dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:inputType="textPassword"
                android:hint="@string/password_label"/>
        </LinearLayout>

        <!-- Age Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <EditText
                android:id="@+id/age_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:inputType="number"
                android:hint="@string/age_label"/>
        </LinearLayout>

        <!-- Address Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <EditText
                android:id="@+id/address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/address_label"/>
        </LinearLayout>

        <!-- Gender Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/gray"
            android:alpha="0.9"
            android:text="@string/register_label"/>

        <TextView
            android:id="@+id/signin_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/darkblue"
            android:gravity="center"
            android:text="@string/already_account_label"
            android:textSize="16dip"/>

    </LinearLayout>

</ScrollView>