<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.lsinf1225.ezmeal.AccountActivity"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="36dp"
            android:src="@drawable/logo" />

        <!-- Username label -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/username_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical|right"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- Old Password label -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/old_password_label"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/old_password_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical|right"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- New Password label -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/new_password_label"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/new_password_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical|right"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- Age label -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/age_label"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/age_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical|right"
                android:inputType="number"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- Address label -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/address_label"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/address_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical|right"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- Gender label -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:alpha="0.75">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="15dp"
                android:padding="12dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.9"
                android:background="@drawable/rounded"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:text="@string/cancel_label"/>
            <Button
                android:id="@+id/account_change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="15dp"
                android:padding="12dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.9"
                android:background="@drawable/rounded"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:text="@string/account_change_label"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>